Fixed run scripts.